--- a/docu.tex
+++ b/docu.tex
@@ -17,6 +17,10 @@
 \pagenumbering{arabic}
 
 \input{includes/abstract}
+\input{includes/gesamtsystem}
+\input{includes/sensoren}
+\input{includes/kommunikation}
+\input{includes/eval_system}
 \input{includes/raspi_config}
 
 \clearpage
