--- a/includes/gesamtsystem.tex
+++ b/includes/gesamtsystem.tex
@@ -1,7 +1,7 @@
 \section{Beschreibung des Gesamtsystems}
 \label{sec:Gesamtsystem}
 
-Die Aufgabe des Systems Poop-Face-Detection ist das Aufnehmen der Merkmale eines Babys, wenn es sich einnässt. Um Signale zu bekommen und zu verarbeiten, wird das Gesamtsystem in drei Komponenten unterteilt. Diese bestehen aus Sensoren, die die Feuchtigkeit sowie die Wärme einer Windel erkennen. Damit der Bewegungsraum des Kleinkindes gegeben ist, werden diese Signale an eine Verarbeitungseinheit übertragen. Eine Bluetooth-Kommunikation stellt die Schnittstelle zwischen Signaleingang und -auswertung dar. In den folgenden Untersektionen werden die Aufgaben der drei Einzelteile genauer beschrieben. Die Umsetzungen der einzelnen Teile können in den Kapiteln \ref{sec:eval_sys}, \ref{sec:sensor} und \ref{sec:com} nachvollzogen werden.
+Die Aufgabe des Systems Poop-Face-Detection ist das Aufnehmen der Merkmale eines Babys, wenn es sich einnässt. Um Signale zu bekommen und zu verarbeiten, wird das Gesamtsystem in drei Komponenten unterteilt. Diese bestehen aus Sensoren, die die Feuchtigkeit sowie die Wärme einer Windel erkennen. Damit der Bewegungsraum des Kleinkindes gegeben ist, werden diese Signale an eine Verarbeitungseinheit, welche gleichzeitig Videomaterial aufnimmt, übertragen. Eine Bluetooth-Kommunikation stellt die Schnittstelle zwischen Signaleingang und -auswertung dar. In den folgenden Untersektionen werden die Aufgaben der drei Einzelteile genauer beschrieben. Die Umsetzungen der einzelnen Teile können in den Kapiteln \ref{sec:eval_sys}, \ref{sec:sensor} und \ref{sec:com} nachvollzogen werden.
 
 \subsection{Aufgaben der Sensoren}
 
