--- a/includes/motivation.tex
+++ b/includes/motivation.tex
@@ -1,8 +1,6 @@
 \section{Motivation}
 \label{sec:Motivation}
-Im Schnitt dauert es heute x Monate bis ein Kind keine Windeln mehr braucht. Vor einigen Jahren lag dieser Wert noch bei y Monate. Man kann dieses Verhalten auf verschieden Ursachen zurückführen, aber ein Grund ist sicherlich die steigende Saugfähigkeit der Windeln. So fehlt dem Kind die direkte Rückmeldung, dass es sich gerade eingenässt hat. Beschäftigt man sich länger mit diesem Thema 
-
-
-Sucht man im Internet nach den Begriffen \"windelfrei\" oder dem englischen Pendant \"communication elimination\" wird man schnell fündig.
+Alleine in den USA landen jährlich xx Tonnen Plastikwindeln auf der Mülldeponie. Mit einer immer weiter wachsenden Weltbevölkerung und den wirtschaftlich wachsenden Schwellenländern die gerne unseren westlichen Lebensstil übernehmen,
+muss ein Umdenken stattfinden wenn wir unseren Kindern eine saubere Welt hinterlassen wollen. Einen Ansatz bietet hier die "windelfreie Erziehung", im englischen auch als "elimination communication" bekannt. Dieser hat nicht nur das Potenzial den Müllverbrauch zu reduzieren, sondern bringt auch viele weitere Vorteile \footnote{ weiter Informationen finden sie unter ... \textcolor{red}{links einfügen}} für die Kleinen und Eltern.
 
 In den ersten Monaten können Babies sich noch nicht in unsere Sprach ausdrücken, dennoch ist es möglich mit ihnen zu kommunizieren. Über Gesten, Bewegungen und Geräusche versuchen die Kleinen auf sich aufmerksam zu machen oder uns etwas mitzuteilen. Für Eltern ist es nicht immer leicht diese richtig zu deuten. Hier soll unser Projekt \textbf{Poop-Face-Detection} helfen. Es soll Eltern dabei unterstützen das Verhalten ihres Kindes zu erkennen, wenn es sich erleichtern muss.
