--- a/docu.tex
+++ b/docu.tex
@@ -18,6 +18,7 @@
 
 \input{includes/abstract}
 \input{includes/gesamtsystem}
+\input{includes/hardware}
 \input{includes/sensoren}
 \input{includes/kommunikation}
 \input{includes/eval_system}
