--- a/docu.tex
+++ b/docu.tex
@@ -17,6 +17,7 @@
 \pagenumbering{arabic}
 
 \input{includes/abstract}
+\input{includes/motivation}
 \input{includes/gesamtsystem}
 \input{includes/sensoren}
 \input{includes/kommunikation}
