--- a/docu.tex
+++ b/docu.tex
@@ -19,11 +19,11 @@
 \input{includes/abstract}
 \input{includes/motivation}
 \input{includes/gesamtsystem}
-\input{includes/hardware}
-\input{includes/sensoren}
-\input{includes/kommunikation}
+\input{includes/sensor}
 \input{includes/eval_system}
-\input{includes/raspi_config}
+\input{includes/kommunikation}
+
+
 
 \clearpage
 % Literaturverzeichnis
@@ -35,4 +35,5 @@
 \clearpage
 \appendix
 \section{Anhangsüberschrift}
+\input{includes/anhang/raspi_config}
 \end{document}
