--- a/includes/evalsys/hardware.tex
+++ b/includes/evalsys/hardware.tex
@@ -1,11 +1,5 @@
-\section{Hardware-Komponenten}
-\label{sec:hardware}
-
-Wie im Gesamtsystem beschrieben gibt es mehrere Komponenten. Zwei davon besitzen Hardware, welche hier genauer beschrieben werden.
-
-\subsection{Sensor}
-
-\subsection{Evaluation-System}
+\subsection{Hardware-Komponenten}
+\label{subsec:evalsys_hardware}
 
 Die Auswertung des Poop-Face-Detection-Systems ist basierend auf einem Raspberry-PI. Dieser erfüllt die folgenden Anforderungen:
 
