Added eval_sys intro

--- a/includes/eval_system.tex
+++ b/includes/eval_system.tex
@@ -1,6 +1,7 @@
 \section{Evaluation-System}
 \label{sec:eval_sys}
 
+Das Evaluation System soll das Verhalten des Babies erfassen und den Eltern aufbereitet wieder darstellen. Dazu wird ein Videostream gespeichert und über einen Webserver zu Verfügung gestellt. Um sicherzustellen, dass die Videos zu den richtigen Zeitpunkten abgespeichert werden, wird ein Triggersystem genutz. Dieses löst aus, wenn ein entsprechendes Signal vom Sensor detektiert wird. In den folgenden Kapiteln wird zuerst auf die verwendeten Komponenten und anschließend auf die entwickelte Software eingegangen.
 
 \include{includes/evalsys/hardware}
 \include{includes/evalsys/software}
