--- a/includes/motivation.tex
+++ b/includes/motivation.tex
@@ -1,6 +1,6 @@
 \section{Motivation}
 \label{sec:Motivation}
 Alleine in den USA landen jährlich xx Tonnen Plastikwindeln auf der Mülldeponie. Mit einer immer weiter wachsenden Weltbevölkerung und den wirtschaftlich wachsenden Schwellenländern, die gerne unseren westlichen Lebensstil übernehmen,
-muss ein Umdenken stattfinden, wenn wir unseren Kindern eine saubere Welt hinterlassen wollen. Einen Ansatz bietet hierfür die "windelfreie Erziehung", im englischen auch als "elimination communication" bekannt. Diese hat nicht nur das Potenzial den Müllverbrauch zu reduzieren, sondern bringt auch viele weitere Vorteile \footnote{ weiter Informationen finden sie unter ... \textcolor{red}{links einfügen}} für Kleinkinder und Eltern.
+muss ein Umdenken stattfinden, wenn wir unseren Kindern eine saubere Welt hinterlassen wollen. Einen Ansatz bietet hierfür die "windelfreie Erziehung", im englischen auch als "elimination communication" bekannt. Diese hat nicht nur das Potenzial den Müllverbrauch zu reduzieren, sondern bringt auch viele weitere Vorteile \footnote{ weiter Informationen finden sie unter ... \textcolor{red}{links einfügen}} für Kleinkinder und Eltern. \\
 
 In den ersten Monaten können Babies sich noch nicht in unserer Sprach ausdrücken, dennoch ist es möglich mit ihnen zu kommunizieren. Über Gesten, Bewegungen und Geräusche versuchen Säuglinge auf sich aufmerksam zu machen oder uns etwas mitzuteilen. Für Eltern ist es nicht immer leicht das Verhalten richtig zu deuten. Hier soll unser Projekt \textbf{Poop-Face-Detection} helfen. Es soll Eltern dabei unterstützen das Verhalten ihres Kindes zu erkennen, wenn es sich erleichtern muss.
