--- a/literaturquellen.bib
+++ b/literaturquellen.bib
@@ -4,3 +4,15 @@ title={Lustiges {B}uch},
 publisher={Verlagsgruppe Meier},
 year=2004,
 }
+
+@online{picam_webseite,
+  author = "",
+  title = "Camera Module V2",
+  url = "https://www.raspberrypi.org/products/camera-module-v2/",
+}
+
+@online{raspi_datenblatt,
+  author = "",
+  title = "Raspberry PI 3 Model B",
+  url = "https://www.google.de/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&sqi=2&ved=0ahUKEwjSnsvzyIjVAhXEKlAKHcvJB6cQFggwMAE&url=http%3A%2F%2Fdocs-europe.electrocomponents.com%2Fwebdocs%2F14ba%2F0900766b814ba5fd.pdf&usg=AFQjCNH4BAoZyV1IbM0J6lIxCzuzQ_stWw&cad=rja",
+}
