--- a/includes/evalsys/hardware.tex
+++ b/includes/evalsys/hardware.tex
@@ -29,4 +29,6 @@ Für einen Prototypen eines Systems ist in erster Linie die Funktionalität wich
 
 Nicht nur bei der Kamera gibt es eine große Auswahl, sondern auch unter den geeigneten Kleinplatinenrechnern. Hier wird die Raspberry Pi Version 3 verwendet, denn diese verfügt über eine Bluetooth-Schnittstelle, welche für die Funktion des Gesamtsystems gegeben sein muss. Zudem ist bei diesem Model eine Kameraverbindungstelle auf dem Computerboard integriert. Die geschriebenen Programme sowie das Betriebssystem können auf einer Micro-SD-Karte abgespeichert werden.\cite{raspi_datenblatt}
 
-Als Betriebssystem wurde das auf debian basierende Raspbian verwendet, da es bereits eine Vielfalt an nötigen Werkzeugen mitbringt und eine einfache Nachinstallation von fehlender Software bietet. Eine ausführliche Installation des Raspberry Pi befindet sich unter \ref{sec:Einrichtung_Raspi}.
+Als Betriebssystem wurde das auf Debian basierende Raspbian verwendet, da es bereits eine Vielfalt an nötigen Werkzeugen mitbringt und eine einfache Nachinstallation von fehlender Software bietet. Eine ausführliche Installation des Raspberry Pi befindet sich unter \ref{sec:Einrichtung_Raspi}.
+
+Ebenfalls wichtig ist die Internetschnittstelle. Sie sorgt dafür, dass die aufgenommenen Videos zum Ansehen bereit gestellt werden können. Auf die Bedienung der Kamera sowie deren Datenverarbeitung wird im folgenden Abschnitt eingegangen.
