Added \todo command

--- a/praeambel.tex
+++ b/praeambel.tex
@@ -25,6 +25,10 @@ pdfpagelayout={SinglePage},
 pdfpagemode={None},
 }
 
+% make an easy \todo command 
+% which will display a red text
+\newcommand{\todo}[1]{\textcolor{red}{TODO: #1}}
+
 % for the use of listings 
 \usepackage{listings}
 \usepackage{color}
