Added some todos in kom part

--- a/docu.tex
+++ b/docu.tex
@@ -34,6 +34,11 @@
 % Anhang
 \clearpage
 \appendix
-\section{Anhangsüberschrift}
+
 \input{includes/anhang/raspi_config}
+
+\section{Papers}
+\includepdf{extras/paper_jonas.pdf}
+\label{sec:paper_ble}
+
 \end{document}
