--- a/literaturquellen.bib
+++ b/literaturquellen.bib
@@ -1,10 +1,3 @@
-@book{Row04,
-author={Rowling, J.K. and Anderson, F.},
-title={Lustiges {B}uch},
-publisher={Verlagsgruppe Meier},
-year=2004,
-}
-
 @online{picam_webseite,
   author = "",
   title = "Camera Module V2",
@@ -22,3 +15,10 @@ year=2004,
   title = "Bluetooth Low Energy / Bluetooth Smart(4.0/4.1/4.2)",
   url = "https://www.elektronik-kompendium.de/sites/kom/1805171.htm",
 }
+
+@paper{paper_ble_linux,
+  author = "Jonas Malassa",
+  title  = "Bluetooth Low Energy Programming on Linux",
+  year    = "2017"  
+}
+  
