--- a/docu.tex
+++ b/docu.tex
@@ -19,7 +19,7 @@
 \input{includes/abstract}
 \input{includes/motivation}
 \input{includes/gesamtsystem}
-\input{includes/sensor}
+%\input{includes/sensor}
 \input{includes/eval_system}
 \input{includes/kommunikation}
 
