Updated section title

--- a/docu.tex
+++ b/docu.tex
@@ -16,10 +16,10 @@
 \clearpage
 \pagenumbering{arabic}
 
-\input{includes/abstract}
+%\input{includes/abstract}
 \input{includes/motivation}
 \input{includes/gesamtsystem}
-%\input{includes/sensor}
+\input{includes/sensor}
 \input{includes/eval_system}
 \input{includes/kommunikation}
 
