--- a/includes/evalsys/hardware.tex
+++ b/includes/evalsys/hardware.tex
@@ -1,4 +1,4 @@
-\subsection{Komponenten}
+\subsection{Hardware Komponenten}
 \label{subsec:evalsys_hardware}
 
 Die Auswertung des Poop-Face-Detection-Systems ist basierend auf einem Raspberry-PI. Dieser erfüllt die folgenden Anforderungen:
