--- a/includes/evalsys/software.tex
+++ b/includes/evalsys/software.tex
@@ -1,4 +1,4 @@
-\subsection{Komponenten}
+\subsection{Software Komponenten} \
 \label{subsec:evalsys_software}
 
 Die Software beinhaltet mehrere Teilbereiche von dem Erkennen eines Triggers bis zur Ablage des vollständigen Videos. Durch recherche über Wildbewegungskameras konnten einige Bereiche der Videoaufnahme erleichtert werden \todo{Referenz auf Internetseite von Programmcode}.
